[options]
scripts = 
	
dependency_links = 
	
packages = 
	find:
install_requires = 
	appyratus
  ordered_set
  BTrees

[metadata]
name = python-store
description = Pure Python in-memory SQL-like object store
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.3
author = Gigaquads
author_email = what@gigaquads.com
url = https://github.com/gigaquads/store
keywords = 
license = MIT License
platforms =
	any
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

